<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="#EC8D8B">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tfl2_logo_dark" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerInParent="true"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    android:text="@string/choose_image"
                    android:textColor="#fcdcdc"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/low_resolution_image_1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="50dp"
                        android:contentDescription="@string/low_resolution_1" />

                    <ImageView
                        android:id="@+id/low_resolution_image_2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/low_resolution_2" />

                    <ImageView
                        android:id="@+id/low_resolution_image_3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/low_resolution_3" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/low_resolution_image_4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="50dp"
                        android:contentDescription="@string/low_resolution_1" />

                    <ImageView
                        android:id="@+id/low_resolution_image_5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/low_resolution_2" />

                    <ImageView
                        android:id="@+id/low_resolution_image_6"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/low_resolution_3" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/low_resolution_image_7"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="50dp"
                        android:contentDescription="@string/low_resolution_1" />

                    <ImageView
                        android:id="@+id/low_resolution_image_8"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/low_resolution_2" />

                    <ImageView
                        android:id="@+id/low_resolution_image_9"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/low_resolution_3" />
                </LinearLayout>

                <TextView
                    android:id="@+id/chosen_image_tv"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_centerInParent="true"
                    android:text="@string/chosen_image_text"
                    android:textColor="#fcdcdc"
                    android:paddingTop="15dp"
                    android:layout_marginLeft="40dp"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_explanation"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/upsample_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:background="@drawable/button_bg"
                    android:textSize="18sp"
                    android:text="@string/upsample" />

                <LinearLayout
                    android:id="@+id/result_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:paddingTop="20dp"
                    android:orientation="vertical"
                    android:visibility="invisible">
                    <TextView
                        android:id="@+id/super_resolution_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fcdcdc"
                        android:paddingTop="20dp"
                        android:paddingBottom="15dp"
                        android:text="@string/super_resolution_image"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/super_resolution_image"
                        android:layout_width="350dp"
                        android:layout_height="350dp"
                        app:srcCompat="@drawable/preview"
                        android:contentDescription="@string/super_resolution_image" />

                    <TextView
                        android:id="@+id/natively_scaled_image_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:textColor="#fcdcdc"
                        android:paddingBottom="15dp"
                        android:text="@string/natively_scaled_image"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/natively_scaled_image"
                        android:layout_width="350dp"
                        android:layout_height="350dp"
                        app:srcCompat="@drawable/preview"
                        android:contentDescription="@string/natively_scaled_image" />
20
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="80dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <include layout="@layout/bottom_sheet_layout" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
